examples/test/testpolicy3823.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3823
  namespace: namespace299
spec:
  podSelector:
    matchLabels:
      key5: value29
      key21: value25
      key19: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value23
          key1: value30
          key42: value44
      podSelector:
        matchLabels:
          key35: value42
          key34: value2
